Fix layout: Home aligned with text, profile pic beside content; reduce all spacing and font size to fit on one page at 100% zoom

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -13,7 +13,7 @@ body
 article
   background: lighten($dark, 3%)
   margin: 0
-  padding: 1.5em 0
+  padding: 1em 0
   box-shadow: none
 
 h1, h2, h3, h4, h5, h6
@@ -24,7 +24,7 @@ b, strong, th
 
 p
   text-align: justify
-  margin: .6em 0
+  margin: .5em 0
 
 a
   color: $link-color
@@ -66,12 +66,12 @@ img
   height: auto
 
 .profile-image
-  width: 220px !important
-  height: 220px !important
+  width: 180px !important
+  height: 180px !important
   border-radius: 50% !important
   object-fit: cover !important
   display: block !important
-  margin: .4em auto .8em !important
+  margin: 0 !important
 
 
 table
