--- a/_sass/index.sass
+++ b/_sass/index.sass
@@ -1,8 +1,8 @@
-$font-size: calc(0.82rem + 0.22vw) !default
+$font-size: calc(0.78rem + 0.18vw) !default
 $font-weight: 400 !default
 $font-family: "PT Sans", -apple-system, "Helvetica Neue", "Segoe UI", "Roboto", sans-serif !default
 $heading-weight: 600 !default
-$line-height: 1.6 !default
+$line-height: 1.5 !default
 $link-color: #68f !default
 $dark: #212228 !default
 $light: #ffffff !default
