--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -17,14 +17,14 @@ body > article
   margin: 0
 
 body > header, body > footer
-  padding: 1.2em
+  padding: 1em
 
 article header
-  margin-bottom: .8em
+  margin-bottom: .5em
 
 article header h1
-  font-size: 1.5em
-  margin: 0 0 .3em
+  font-size: 1.4em
+  margin: 0 0 .2em
 
 nav
   margin: .5em -1.2em
